<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/navigation_photos"
        android:icon="@drawable/ic_menu_image"
        android:title="@string/menu_photos" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings" />


</menu>