<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemIconTint="@color/colorPrimary"
        app:itemTextColor="@color/black"
        app:itemRippleColor="@color/orange_reddit"
        app:menu="@menu/bottom_navigation_menu" />

    <FrameLayout
        android:id="@+id/progressBarLayout"
        android:visibility="gone"
        android:focusable="true"
        android:background="@color/orange_reddit_15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_gravity="center"
            android:indeterminateTint="@color/orange_reddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>